--- a/test/fixtures/risk_scores.yml
+++ b/test/fixtures/risk_scores.yml
@@ -4,12 +4,14 @@ one:
   penalties: 1.5
   penalties_comment: MyString
   fulfillment_probability: 1.5
-  fulfillmetn_probability_comment: MyString
+  fulfillment_probability_comment: MyString
+  total_score: 1.5
   total_score: 1.5
 
 two:
   penalties: 1.5
   penalties_comment: MyString
   fulfillment_probability: 1.5
-  fulfillmetn_probability_comment: MyString
+  fulfillment_probability_comment: MyString
+  total_score: 1.5
   total_score: 1.5
